Typo in the usage of field types in ticket template.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5464 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -58,7 +58,7 @@
     <py:def function="display_change(change)">
       <ul py:if="change.fields" class="changes">
         <li py:for="field_name, field in change.fields.items()"
-            py:with="field_type = field_types.get('field_name')">
+            py:with="field_type = field_types.get(field_name)">
           <strong>${field_name}</strong>
           <py:choose>
             <py:when test="field_name == 'attachment'">
