TracBrowser: in-place expansion was not playing well with the age color scale feature
Now we keep around the time range information corresponding to the toplevel directory, which is sent back in the XHR for getting the subdir entries.

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5519 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/versioncontrol/templates/browser.html
+++ b/trac/versioncontrol/templates/browser.html
@@ -21,7 +21,11 @@
           /* browsers using old WebKits have issues with expandDir... */
           var webkit_rev = /AppleWebKit\/(\d+)/.exec(navigator.userAgent);
           if ( !webkit_rev || (521 - webkit_rev[1]).toString()[0] == "-" )
-            enableExpandDir(null, $("#dirlist tr"));
+            enableExpandDir(null, $("#dirlist tr"), {
+                action: 'inplace',
+                ranges_min_secs: '$dir.range_min_secs',
+                ranges_max_secs: '$dir.range_max_secs'
+            });
         </py:if>
         <py:if test="file and file.annotate">
           enableBlame("${href.changeset()}/", "${path}");
