Highlight inaccessible Wiki pages when formatting.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5537 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/trac.css
+++ b/trac/htdocs/css/trac.css
@@ -305,6 +305,7 @@ a.missing:link, a.missing:visited { background: #fafaf0 }
 a.missing:hover { color: #000 }
 a.closed:link, a.closed:visited { text-decoration: line-through }
 span.closed { text-decoration: line-through }
+span.forbidden, a.forbidden { background: #fafaf0; color: #998; }
 
 dl.wiki dt { font-weight: bold }
 dl.compact dt { float: left; padding-right: .5em }
