More correct approach for displaying list of attachments (instead of [5562:5563]). This will be improved upon.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5567 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/attachment.html
+++ b/trac/templates/attachment.html
@@ -76,7 +76,7 @@
 
       <py:when test="'list'">
         <h1><a href="$parent_href">$parent_name</a></h1>
-        ${list_of_attachments(context.parent, attachments, context.resource_href())}
+        ${list_of_attachments(context.parent, attachments, attachment_perm)}
       </py:when>
 
       <py:otherwise> <!--! 'render' mode -->
