Fix a minor glitch introduced by r5568 for displaying the parent name in the attachment template in list mode
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5569 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/attachment.html
+++ b/trac/templates/attachment.html
@@ -10,8 +10,9 @@
     <title>Attachment</title>
   </head>
 
-  <body py:with="parent_name = context.parent.name();
-                 parent_href = context.parent.resource_href()">
+  <body py:with="parent = attachments and attachments.parent or context.parent;
+                 parent_name = parent.name();
+                 parent_href = parent.get_href(href)">
 
     <div id="ctxtnav" class="nav">
       <h2>Attachment Navigation</h2>
