Follow-up to the attachment permission refactoring code ([5561:5572/trunk]), according to the feedback given by athomas:
  A better solution would be to add ATTACHMENT_VIEW, ATTACHMENT_DELETE,
  ATTACHMENT_CREATE and ATTACHMENT_ADMIN permissions and create a
  `LegacyAttachmentPolicy` `IPermissionPolicy` implementation (enabled by
  default). This implementation would effectively implement the
  behaviour of _perm_maps - that of mapping ATTACHMENT_* checks to the
  appropriate legacy permission (eg. ATTACHMENT_VIEW in the context of
  wiki:WikiStart would be mapped to WIKI_VIEW, etc.). 


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5580 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/attachment.html
+++ b/trac/templates/attachment.html
@@ -102,7 +102,7 @@
           ${preview_file(preview)}
         </div>
 
-        <py:if test="can_delete">
+        <py:if test="'ATTACHMENT_DELETE' in perm(context)">
           <div class="buttons">
             <form method="get" action="">
               <div id="delete">
