Fix for #3295 (preserving empty lines in wiki code blocks). The approach chosen is a workaround until the wiki formatting engine has been updated to emit markup event streams instead of big blobs of text. It requires adding an `xml:space="preserve"` attribute to the containing element of any `wiki_to_html()` expression in the templates. These attributes do make it through to the output, but that shouldn't do any harm. They'd go away if we simply serialized to HTML.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5586 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/attachment.html
+++ b/trac/templates/attachment.html
@@ -91,7 +91,7 @@
               </th>
             </tr>
             <tr>
-              <td class="message searchable">
+              <td class="message searchable" xml:space="preserve">
                 ${wiki_to_html(context.parent, attachment.description)}
               </td>
             </tr>
