--- a/trac/ticket/templates/report_view.html
+++ b/trac/ticket/templates/report_view.html
@@ -26,7 +26,9 @@
         <span py:if="numrows and report.id != -1" class="numrows">($numrows matches)</span>
       </h1>
 
-      <div py:if="report.description" id="description">${wiki_to_html(context, report.description)}</div>
+      <div py:if="report.description" id="description" xml:space="preserve">
+        ${wiki_to_html(context, report.description)}
+      </div>
 
       <div py:if="report.id != -1 and report.perms" class="buttons">
         <form py:if="'MODIFY' in report.perms" action="" method="get">
@@ -132,7 +134,8 @@
                         </py:when>
 
                         <py:when test="col == 'description'">
-                          <td class="$col" py:attrs="td_attrs">${wiki_to_html(row.context, cell.value)}
+                          <td class="$col" py:attrs="td_attrs" xml:space="preserve">
+                            ${wiki_to_html(row.context, cell.value)}
                             <hr py:if="fullrow"/>
                           </td>
                         </py:when>
