--- a/trac/versioncontrol/templates/browser.html
+++ b/trac/versioncontrol/templates/browser.html
@@ -121,7 +121,7 @@
         </tr>
         <tr py:if="file">
           <td class="message searchable" py:choose="">
-            <py:when test="wiki_format_messages">
+            <py:when test="wiki_format_messages" xml:space="preserve">
               ${wiki_to_html(context('changeset', file.changeset.rev), file.changeset.message, escape_newlines=True)}
             </py:when>
             <py:otherwise>${file.changeset.message}</py:otherwise>
